--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -4,11 +4,14 @@
   "description": "learning node, express and mongodb",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start:dev": "cross-env nodemon server.js",
+    "start:prod": "cross-env NODE_ENV=production nodemon server.js"
   },
   "author": "Harsh Patel",
   "license": "ISC",
   "dependencies": {
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0"
   }
