Copy until section-6 Connecting to MongoDB-Mongoose

--- a/4-natours/starter/config.env
+++ b/4-natours/starter/config.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT=3000
-USERNAME=harsh
-PASSWORD=123456
+DATABASE=mongodb+srv://dbUser:<PASSWORD>@cluster0.djr4p.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_PWD=nUFE51UyOC41I9o3
