--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -15,5 +15,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.29",
     "morgan": "^1.10.0"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   }
 }
