--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.29",
     "morgan": "^1.10.0",
-    "slugify": "^1.4.5"
+    "slugify": "^1.4.5",
+    "validator": "^13.1.1"
   },
   "engines": {
     "node": ">=12.0.0"
