--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start:dev": "cross-env nodemon server.js",
-    "start:prod": "cross-env NODE_ENV=production nodemon server.js"
+    "start:prod": "cross-env NODE_ENV=production nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "Harsh Patel",
   "license": "ISC",
@@ -20,5 +21,8 @@
   },
   "engines": {
     "node": ">=12.0.0"
+  },
+  "devDependencies": {
+    "ndb": "^1.1.5"
   }
 }
