--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -16,11 +16,17 @@
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.0",
+    "express-rate-limit": "^5.1.3",
+    "helmet": "^4.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.29",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.11",
     "slugify": "^1.4.5",
-    "validator": "^13.1.1"
+    "validator": "^13.1.1",
+    "xss-clean": "^0.1.1"
   },
   "engines": {
     "node": ">=12.0.0"
